cros: Remove unlock with external binary auth code

The feature was never fully implemented

Fixed: 899812
Change-Id: I6e813038fc20c1aab4ef785b7099d0a601b46b2a
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/2198985
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Reviewed-by: Roman Aleksandrov <raleksandrov@google.com>
Commit-Queue: Roman Sorokin [CET] <rsorokin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#770007}