ash/login/login_screen_controller.h
@@ -63,9 +63,6 @@ class ASH_EXPORT LoginScreenController : public LoginScreen,
                                          const std::string& password,
                                          bool authenticated_by_pin,
                                          OnAuthenticateCallback callback);
-  void AuthenticateUserWithExternalBinary(const AccountId& account_id,
-                                          OnAuthenticateCallback callback);
-  void EnrollUserWithExternalBinary(OnAuthenticateCallback callback);
   void AuthenticateUserWithEasyUnlock(const AccountId& account_id);
   void AuthenticateUserWithChallengeResponse(const AccountId& account_id,
                                              OnAuthenticateCallback callback);
