ash/login/ui/login_auth_user_view.cc
@@ -27,7 +27,6 @@
 #include "ash/shell.h"
 #include "ash/strings/grit/ash_strings.h"
 #include "ash/system/night_light/time_of_day.h"
-#include "ash/system/toast/toast_manager_impl.h"
 #include "ash/wallpaper/wallpaper_controller_impl.h"
 #include "base/bind.h"
 #include "base/i18n/time_formatting.h"
@@ -755,15 +754,6 @@ views::View* LoginAuthUserView::TestApi::disabled_auth_message() const {
   return view_->disabled_auth_message_;
 }
 
-views::Button* LoginAuthUserView::TestApi::external_binary_auth_button() const {
-  return view_->external_binary_auth_button_;
-}
-
-views::Button* LoginAuthUserView::TestApi::external_binary_enrollment_button()
-    const {
-  return view_->external_binary_enrollment_button_;
-}
-
 bool LoginAuthUserView::TestApi::HasAuthMethod(AuthMethods auth_method) const {
   return view_->HasAuthMethod(auth_method);
 }
@@ -844,16 +834,6 @@ LoginAuthUserView::LoginAuthUserView(const LoginUserInfo& user,
           weak_factory_.GetWeakPtr()));
   challenge_response_view_ = challenge_response_view.get();
 
-  // TODO(jdufault): Implement real UI.
-  external_binary_auth_button_ =
-      views::MdTextButton::Create(
-          this, base::ASCIIToUTF16("Authenticate with external binary"))
-          .release();
-  external_binary_enrollment_button_ =
-      views::MdTextButton::Create(
-          this, base::ASCIIToUTF16("Enroll with external binary"))
-          .release();
-
   SetPaintToLayer(ui::LayerType::LAYER_NOT_DRAWN);
 
   // Wrap the password view with a container having the fill layout, so that
@@ -887,12 +867,6 @@ LoginAuthUserView::LoginAuthUserView(const LoginUserInfo& user,
   auto wrapped_challenge_response_view =
       login_views_utils::WrapViewForPreferredSize(
           std::move(challenge_response_view));
-  auto wrapped_external_binary_view =
-      login_views_utils::WrapViewForPreferredSize(
-          base::WrapUnique(external_binary_auth_button_));
-  auto wrapped_external_binary_enrollment_view =
-      login_views_utils::WrapViewForPreferredSize(
-          base::WrapUnique(external_binary_enrollment_button_));
   auto wrapped_padding_below_password_view =
       login_views_utils::WrapViewForPreferredSize(
           std::move(padding_below_password_view));
@@ -909,10 +883,6 @@ LoginAuthUserView::LoginAuthUserView(const LoginUserInfo& user,
       AddChildView(std::move(wrapped_fingerprint_view));
   views::View* wrapped_challenge_response_view_ptr =
       AddChildView(std::move(wrapped_challenge_response_view));
-  views::View* wrapped_external_binary_view_ptr =
-      AddChildView(std::move(wrapped_external_binary_view));
-  views::View* wrapped_external_binary_enrollment_view_ptr =
-      AddChildView(std::move(wrapped_external_binary_enrollment_view));
   views::View* wrapped_user_view_ptr =
       AddChildView(std::move(wrapped_user_view));
   views::View* wrapped_padding_below_password_view_ptr =
@@ -946,8 +916,6 @@ LoginAuthUserView::LoginAuthUserView(const LoginUserInfo& user,
   add_view(wrapped_pin_view_ptr);
   add_view(wrapped_fingerprint_view_ptr);
   add_view(wrapped_challenge_response_view_ptr);
-  add_view(wrapped_external_binary_view_ptr);
-  add_view(wrapped_external_binary_enrollment_view_ptr);
   add_padding(kDistanceFromPinKeyboardToBigUserViewBottomDp);
 
   // Update authentication UI.
@@ -968,7 +936,6 @@ void LoginAuthUserView::SetAuthMethods(uint32_t auth_methods,
   bool has_tap = HasAuthMethod(AUTH_TAP);
   bool force_online_sign_in = HasAuthMethod(AUTH_ONLINE_SIGN_IN);
   bool has_fingerprint = HasAuthMethod(AUTH_FINGERPRINT);
-  bool has_external_binary = HasAuthMethod(AUTH_EXTERNAL_BINARY);
   bool has_challenge_response = HasAuthMethod(AUTH_CHALLENGE_RESPONSE);
   bool auth_disabled = HasAuthMethod(AUTH_DISABLED);
 
@@ -997,12 +964,6 @@ void LoginAuthUserView::SetAuthMethods(uint32_t auth_methods,
   fingerprint_view_->SetVisible(has_fingerprint);
   fingerprint_view_->SetCanUsePin(can_use_pin);
   challenge_response_view_->SetVisible(has_challenge_response);
-  external_binary_auth_button_->SetVisible(has_external_binary);
-  external_binary_enrollment_button_->SetVisible(has_external_binary);
-
-  if (has_external_binary) {
-    power_manager_client_observer_.Add(chromeos::PowerManagerClient::Get());
-  }
 
   int padding_view_height = kDistanceBetweenPasswordFieldAndPinKeyboardDp;
   if (has_fingerprint && !has_pin_pad) {
@@ -1250,28 +1211,10 @@ void LoginAuthUserView::RequestFocus() {
 
 void LoginAuthUserView::ButtonPressed(views::Button* sender,
                                       const ui::Event& event) {
-  DCHECK(sender == online_sign_in_message_ ||
-         sender == external_binary_auth_button_ ||
-         sender == external_binary_enrollment_button_);
+  DCHECK(sender == online_sign_in_message_);
   if (sender == online_sign_in_message_) {
     OnOnlineSignInMessageTap();
-  } else if (sender == external_binary_auth_button_) {
-    AttemptAuthenticateWithExternalBinary();
-  } else if (sender == external_binary_enrollment_button_) {
-    password_view_->SetReadOnly(true);
-    external_binary_auth_button_->SetEnabled(false);
-    external_binary_enrollment_button_->SetEnabled(false);
-    Shell::Get()->login_screen_controller()->EnrollUserWithExternalBinary(
-        base::BindOnce(&LoginAuthUserView::OnEnrollmentComplete,
-                       weak_factory_.GetWeakPtr()));
   }
-}
-
-void LoginAuthUserView::LidEventReceived(
-    chromeos::PowerManagerClient::LidState state,
-    const base::TimeTicks& timestamp) {
-  if (state == chromeos::PowerManagerClient::LidState::OPEN)
-    AttemptAuthenticateWithExternalBinary();
 }
 
 void LoginAuthUserView::OnAuthSubmit(const base::string16& password) {
@@ -1299,8 +1242,6 @@ void LoginAuthUserView::OnAuthComplete(base::Optional<bool> auth_success) {
   if (!auth_success.has_value() || !auth_success.value()) {
     password_view_->Reset();
     password_view_->SetReadOnly(false);
-    external_binary_auth_button_->SetEnabled(true);
-    external_binary_enrollment_button_->SetEnabled(true);
   }
 
   on_auth_.Run(auth_success.value(), /*display_error_messages=*/true);
@@ -1328,25 +1269,6 @@ void LoginAuthUserView::OnChallengeResponseAuthComplete(
   on_auth_.Run(auth_success.value_or(false), /*display_error_messages=*/false);
 }
 
-void LoginAuthUserView::OnEnrollmentComplete(
-    base::Optional<bool> enrollment_success) {
-  password_view_->SetReadOnly(false);
-  external_binary_auth_button_->SetEnabled(true);
-  external_binary_enrollment_button_->SetEnabled(true);
-
-  std::string result_message;
-  if (!enrollment_success.has_value()) {
-    result_message = "Enrollment attempt failed to received response.";
-  } else {
-    result_message = enrollment_success.value() ? "Enrollment successful."
-                                                : "Enrollment failed.";
-  }
-
-  ToastData toast_data("EnrollmentToast", base::ASCIIToUTF16(result_message),
-                       2000, base::nullopt, true /*visible_on_lock_screen*/);
-  Shell::Get()->toast_manager()->Show(toast_data);
-}
-
 void LoginAuthUserView::OnUserViewTap() {
   if (HasAuthMethod(AUTH_TAP)) {
     Shell::Get()->login_screen_controller()->AuthenticateUserWithEasyUnlock(
@@ -1366,16 +1288,6 @@ void LoginAuthUserView::OnOnlineSignInMessageTap() {
 
 bool LoginAuthUserView::HasAuthMethod(AuthMethods auth_method) const {
   return (auth_methods_ & auth_method) != 0;
-}
-
-void LoginAuthUserView::AttemptAuthenticateWithExternalBinary() {
-  password_view_->SetReadOnly(true);
-  external_binary_auth_button_->SetEnabled(false);
-  external_binary_enrollment_button_->SetEnabled(false);
-  Shell::Get()->login_screen_controller()->AuthenticateUserWithExternalBinary(
-      current_user().basic_user_info.account_id,
-      base::BindOnce(&LoginAuthUserView::OnAuthComplete,
-                     weak_factory_.GetWeakPtr()));
 }
 
 void LoginAuthUserView::AttemptAuthenticateWithChallengeResponse() {
